@@ -419,11 +419,16 @@ case 'list':
 						<select name="host_id" onChange="applyGraphListFilterChange(document.form_graph_list)">
 							<option value="0"<?php print $_REQUEST["filter"];?><?php if ($_REQUEST["host_id"] == "0") {?> selected<?php }?>>Any</option>
 							<?php
+							/* get policy information for the sql where clause */
+							$sql_where = get_graph_permissions_sql($current_user["policy_graphs"], $current_user["policy_hosts"], $current_user["policy_graph_templates"]);
+
 							$hosts = db_fetch_assoc("SELECT DISTINCT host.id, host.description as name
-								FROM host
-								INNER JOIN graph_local
-								ON host.id=graph_local.host_id" .
-								(($request["graph_template_id"] > 0) ? " WHERE graph_template_id=" . $_REQUEST["graph_template_id"] :"") . "
+								FROM (graph_templates_graph,graph_local)
+								LEFT JOIN host ON (host.id=graph_local.host_id)
+								LEFT JOIN graph_templates ON (graph_templates.id=graph_local.graph_template_id)
+								LEFT JOIN user_auth_perms ON ((graph_templates_graph.local_graph_id=user_auth_perms.item_id and user_auth_perms.type=1 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (host.id=user_auth_perms.item_id and user_auth_perms.type=3 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (graph_templates.id=user_auth_perms.item_id and user_auth_perms.type=4 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . "))
+								WHERE graph_templates_graph.local_graph_id=graph_local.id
+								" . (empty($sql_where) ? "" : "and $sql_where") . "
 								ORDER BY name");
 
 							if (sizeof($hosts) > 0) {
@@ -434,18 +439,20 @@ case 'list':
 							?>
 						</select>
 					</td>
-					<td nowrap style='white-space: nowrap;' width="100">
-						&nbsp;<strong>Graph Template:</strong>&nbsp;
+					<td nowrap style='white-space: nowrap;' width="70">
+						&nbsp;<strong>Template:</strong>&nbsp;
 					</td>
 					<td width="1">
 						<select name="graph_template_id" onChange="applyGraphListFilterChange(document.form_graph_list)">
 							<option value="0"<?php print $_REQUEST["filter"];?><?php if ($_REQUEST["host_id"] == "0") {?> selected<?php }?>>Any</option>
 							<?php
-							$graph_templates = db_fetch_assoc("SELECT graph_templates.*
-								FROM graph_templates
-								INNER JOIN graph_local
-								ON graph_templates.id=graph_local.graph_template_id" .
-								(($request["host_id"] > 0) ? " WHERE host_id=" . $_REQUEST["host_id"] :"") . "
+							$graph_templates = db_fetch_assoc("SELECT DISTINCT graph_templates.*
+								FROM (graph_templates_graph,graph_local)
+								LEFT JOIN host ON (host.id=graph_local.host_id)
+								LEFT JOIN graph_templates ON (graph_templates.id=graph_local.graph_template_id)
+								LEFT JOIN user_auth_perms ON ((graph_templates_graph.local_graph_id=user_auth_perms.item_id and user_auth_perms.type=1 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (host.id=user_auth_perms.item_id and user_auth_perms.type=3 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (graph_templates.id=user_auth_perms.item_id and user_auth_perms.type=4 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . "))
+								WHERE graph_templates_graph.local_graph_id=graph_local.id
+								" . (empty($sql_where) ? "" : "and $sql_where") . "
 								ORDER BY name");
 
 							if (sizeof($graph_templates) > 0) {
